                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
  [Remove entries to the current 2.0 and 2.2 section below, when backported]

  *) mod_disk_cache: Implement read-while-caching.
     [Niklas Edmundsson <nikke acc.umu.se>]

  *) mod_disk_cache: NULL fd pointers when closing them, fix missing
     close/flush, remove some unneccessary code duplication instead
     of calling the right helper in replace_brigade_with_cache().
     [Niklas Edmundsson <nikke acc.umu.se>]

  *) sendfile_nonblocking() takes the _brigade_ as an argument, gets 
     the first bucket from the brigade, finds it not to be a FILE
     bucket and barfs. The fix is to pass a bucket rather than a brigade.
     [Niklas Edmundsson <nikke acc.umu.se>]

  *) mod_disk_cache: Do away with the write-to-file-then-move-in-place
     mentality. [Niklas Edmundsson <nikke acc.umu.se>]

  *) mod_rewrite: support rewritemap by SQL query [Nick Kew]

  *) Fix issue which could cause piped loggers to be orphaned and never
     terminate after a graceful restart.  PR 40651.  [Joe Orton, 
     Ruediger Pluem]

  *) mod_headers: support regexp-based editing of HTTP headers [Nick Kew]

  *) mod_cache: Eliminate a bogus error in the log when a filter returns
     AP_FILTER_ERROR. [Niklas Edmundsson <nikke acc.umu.se>]

  *) mod_disk_cache: Make caching of large files possible on 32bit machines
     by determining whether the cached file should be copied on disk rather
     than loaded into RAM. PR39380 [Niklas Edmundsson <nikke acc.umu.se>]

  *) mod_mem_cache: Convert mod_mem_cache to use APR memory pool functions
     by creating a root pool for object persistence across requests. This
     also eliminates the need for custom serialization code.
     [Davi Arnaut <davi haxent.com.br>]

  *) mod_mem_cache: Memory leak fix: Unconditionally free the buffer.
     [Davi Arnaut <davi haxent.com.br>]

  *) mod_cache: From RFC3986 (section 6.2.3.) if a URI contains an