@@ -87,4 +87,25 @@ later.</compatibility>
 </usage>
 
 </directivesynopsis>
+
+<directivesynopsis>
+
+<name>DumpIOLogLevel</name>
+<description>Controls the logging level of the DumpIO output</description>
+<syntax>DumpIOLogLevel <var>level</var></syntax>
+<default>DumpIOLogLevel debug</default>
+<contextlist><context>server config</context></contextlist>
+<compatibility>DumpIOLogLevel is only available in Apache 2.3.x and 
+later.</compatibility>
+
+<usage>
+    <p>Enable dumping of all output at a specific <directive
+    module="core">LogLevel</directive> level.</p>
+
+    <example><title>Example</title>
+      DumpIOLogLevel notice
+    </example>
+</usage>
+
+</directivesynopsis>
 </modulesynopsis>
